syntax = "proto3";
package db_proxy;

service DbProxy {
    rpc SendQuery (QueryRequest) returns (QueryReply);
}

message QueryRequest {
   string query = 1;
   string tenant_id = 2;
}

message QueryReply {
    repeated string rows = 1;
    string error = 2;
}